cfn/web-server.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Uno Homeloans Test  EC2 instance with java maven

Resources:

  WebServer:
    Type: AWS::EC2::Instance
    DependsOn: "DynamoDB"
    Properties:
      ImageId: ami-00c740625ae4d6263
      InstanceType: t1.micro
      KeyName: 'uno'
      SecurityGroups:
        - Ref: WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: webserver
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
          # add github to known hosts
          ssh-keyscan github.com >> ~/.ssh/known_hosts
          rm -rf   /workspace/*
          cd /workspace
          # script runs as root, so change user for cloning git repo
          sudo -H -u ec2-user bash -c 'git clone git@github.com:anjan-poudel/uno-test.git'
          cd uno-test
          mvn clean install
          sudo java -jar target/uno-homeloans-test-1.0-SNAPSHOT.jar

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow ssh and http
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: 'tcp'
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: 'tcp'
          ToPort: 80


Outputs:
  WebServerPublicIPAddress:
    Description: 'The public IP address of the EC2 Instance.'
    Value: !GetAtt WebServer.PublicDnsName
    Export:
      Name: !Sub '${AWS::StackName}-Public-DNS-Address'
